# bmybbs

./: .clangd  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AGENTS.md  Bindent  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  EasyInstall.sh  EasyUninstall.sh  GEMINI.md  Install.sh  Install.sh.in  Makefile  Makefile.Base  Makefile.in  NEWS  PrepDirs.sh  README  README.md  bbsconfig  bmy_grep.sh  config.status  install_binaries_and_libraries.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: CMakeLists.txt  Makefile  README.md  api.h  api_article.c  api_attach.c  api_board.c  api_error.c  api_mail.c  api_meta.c  api_notification.c  api_oauth.c  api_search.c  api_subscription.c  api_template.c  api_user.c  apiconfig.h  apilib.c  apilib.h  error_code.h  main.c
api/templates/: api_user_info.json  api_user_login.json
api/tests/: apilib.test.c  main.c
libbmy/: 2fa.c  CMakeLists.txt  README.md  algorithms.c  article.c  board.c  convcode.c  cookie.c  iphash.c  iphash.h  logging.c  memorystruct.h  mysql_wrapper.c  mysql_wrapper.h  pg_wrapper.c  search.c  smtp.c  smtp.h  subscription.c  user.c  wechat.c
libythtbbs/: CMakeLists.txt  Makefile  announce.c  announce.h  app.h  article.c  article.h  attach.c  attach.h  bbseva.c  bbseva.h  binaryattach.c  binaryattach.h  board.c  board.h  boardrc.c  boardrc.h  cache.c  cache.h  captcha.c  captcha.h  docutil.c  docutil.h  gensectree  gensectree.c  goodgbid.c  identify.c  libiden.c  mailsender.c  mailsender.h  misc.c  misc.h  modes.h  modetype.c  modetype.h  msg.c  msg.h  mybrd.c  notification.c  notification.h  (+17 more)
libythtbbs/cache/: board.c  cache-internal.h  user.c  utmp.c
local_utl/: 2nd_expire.c  CMakeLists.txt  MakeIndex3.c  MakeIndex3.sh  Makefile  auto_rm_junk.c  autoclear.c  autoundeny.c  averun.c  bbslists.c  bbslogd.c  bbspop3d.c  bbsstatproc2.c  bbsstatproclog.c  bbstop.c  bfinger.c  bm.c  boardscore.c  boardstat2.c  changeboardname.c  changeuser.c  checkan.sh  checkspam.py  clear_attach.c  clear_junk.c  combine_arc.c  cpersonal.c  crontab.bbs  daily.sh  esearch.c  find_lost_mail.c  find_rm_lost.c  fixdir.c  fixtitle.c  fixzapbuf.c  gen_title.c  heavywork.sh  id_distr.c  indexer-64.py  indexer.py  (+36 more)
local_utl/2nd_expire/: 2nd_expire.c  CMakeLists.txt
local_utl/addH/: addH.c
local_utl/annIndex/: annIndex.c
local_utl/auto_rm_fakedir/: auto_rm_fakedir.c
local_utl/auto_rm_junk/: CMakeLists.txt  auto_rm_junk.c
local_utl/autoclear/: CMakeLists.txt  autoclear.c
local_utl/autoundeny/: CMakeLists.txt  autoundeny.c
local_utl/averun/: CMakeLists.txt  averun.c
local_utl/bbsevad/: bbsevad.c
local_utl/bbslogd/: CMakeLists.txt  README.md  bbslogd.c
local_utl/bbspop3d/: CMakeLists.txt  bbspop3d.c
local_utl/bbsstatlog/: CMakeLists.txt  bbsstatlog.c
local_utl/bbsstatproclog/: CMakeLists.txt  bbsstatproclog.c
local_utl/bbstop/: CMakeLists.txt  bbstop.c
local_utl/bfinger/: CMakeLists.txt
local_utl/bm/: CMakeLists.txt  bm.c
local_utl/bm2/: bm2.c
local_utl/cache_dump/: CMakeLists.txt  README.md  main.c
local_utl/changeboardname/: CMakeLists.txt  changeboardname.c
local_utl/changetid/: CMakeLists.txt  main.c
local_utl/char2hex/: CMakeLists.txt  README.md  char2hex.c
local_utl/check_ulevel/: CMakeLists.txt  check_ulevel.c
local_utl/chm4win32/: make.bat
local_utl/clear_attach/: CMakeLists.txt  clear_attach.c
local_utl/clear_junk/: CMakeLists.txt  clear_junk.c
local_utl/combine_arc/: CMakeLists.txt
local_utl/common/: record.c  sysrecord.c  www.c
local_utl/cpersonal/: CMakeLists.txt  cpersonal.c
local_utl/dl/: anall.c
local_utl/filter/: filter.c
local_utl/find_lost_mail/: CMakeLists.txt  find_lost_mail.c
local_utl/find_rm_lost/: CMakeLists.txt  find_rm_lost.c
local_utl/find_save_lost/: find_save_lost.c
local_utl/finddf/: CMakeLists.txt  finddf.c
local_utl/fixdir/: CMakeLists.txt  fixdir.c
local_utl/id_boards/: CMakeLists.txt  id_boards.c
local_utl/import_feed/: CMakeLists.txt  common.c  common.h  db.c  db.h  delete_user.c  import_board.c  import_thread.c  import_user.c  main.c  test_board.c
local_utl/include/: bbsstatlog.h  www.h
local_utl/log_importer/: CMakeLists.txt  README.md  db.c  db.h  importer.c  importer.h  log_parser.c  log_parser.h  log_tokenizer.c  log_tokenizer.h  main.c  test_log_parser.c  test_log_tokenizer.c  watch_counts.sh  watch_latest.sh  watch_sizes.sh
local_utl/logfreq/: logfreq.c
local_utl/mailallmsg/: mailallmsg.c
local_utl/makeindex3/: CMakeLists.txt  makeindex3.c
local_utl/mergeb/: CMakeLists.txt  mergeb.c
local_utl/nbstat/: CMakeLists.txt  bbslists.c  bmstat.c  boardscore.c  boardstat2.c  nbstat.c  nbstat.h  strhash.c  strhash.h
local_utl/near/: near.c
local_utl/newboards/: CMakeLists.txt  newboards.c
local_utl/newfixdir/: newfixdir.c
local_utl/newtop10/: CMakeLists.txt  newtop10.c
local_utl/passwd_crypto_test/: CMakeLists.txt  PLANS.md  README.md  common.c  generator.c  passwd_crypto_test.h  validator_in_tree.c  validator_libcrypt.c
local_utl/postfile/: CMakeLists.txt  postfile.c
local_utl/printSecLastMark/: CMakeLists.txt  printSecLastMark.c
local_utl/printSecLastUpdate/: CMakeLists.txt  printSecLastUpdate.c
local_utl/ptyexec/: CMakeLists.txt  ptyexec.c
local_utl/refriend2/: CMakeLists.txt  refriend2.c
local_utl/reminder/: reminder.c
local_utl/repsync/: CMakeLists.txt
local_utl/save_brc/: CMakeLists.txt  save_brc.c
local_utl/searchContent/: CMakeLists.txt  searchContent.c
smth_sshbbsd/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  OVERVIEW  README  README.CIPHERS  README.DEATTACK  README.SECURERPC  README.SECURID  README.TIS  TODO  acconfig.h  auth-passwd.c  authfile.c  blowfish.c  blowfish.h  bufaux.c  bufaux.h  buffer.c  buffer.h  canohost.c  cipher.c  cipher.h  compress.c  compress.h  config.h  config.h.in  config.lib  config.status  configure  configure.ac  crc32.c  crc32.h  deattack.c  (+44 more)
tests/: CMakeLists.txt  main.c
unused/: AUTHORS  INSTALL  Makefile.Base.in  configure  configure.in  makedist.sh
(+1601 files in other folders)
