include_directories(include)

add_subdirectory(userid_hash_summary)
add_subdirectory(cache_dump)

#add_subdirectory(annIndex)
add_subdirectory(averun)
#add_subdirectory(auto_rm_fakedir)
add_subdirectory(auto_rm_junk)
add_subdirectory(autoclear)
add_subdirectory(autoundeny)
#add_subdirectory(bfinger)
add_subdirectory(bbslogd)
add_subdirectory(bbspop3d)
add_subdirectory(bbsstatlog)
#add_subdirectory(bbsstatproc2)
add_subdirectory(bbsstatproclog)
add_subdirectory(bbstop)
add_subdirectory(bm)
#add_subdirectory(bm2)
add_subdirectory(changeboardname)
add_subdirectory(char2hex)
add_subdirectory(check_ulevel)
add_subdirectory(clear_attach)
add_subdirectory(clear_junk)
add_subdirectory(combine_arc)
add_subdirectory(cpersonal)
#add_subdirectory(filter)
add_subdirectory(find_lost_mail)
add_subdirectory(find_rm_lost)
add_subdirectory(finddf)
add_subdirectory(fixdir)

add_subdirectory(id_boards)
#add_subdirectory(id_distr)
#add_subdirectory(logfreq)
add_subdirectory(makeindex3)
add_subdirectory(mergeb)
#add_subdirectory(near)
add_subdirectory(nbstat)
add_subdirectory(newboards)
add_subdirectory(newtop10)

add_subdirectory(postfile)
#add_subdirectory(printSecLastMark)
#add_subdirectory(printSecLastUpdate)
add_subdirectory(ptyexec)

#add_subdirectory(reminder)
add_subdirectory(repsync)
add_subdirectory(save_brc)
#add_subdirectory(searchauthor)
add_subdirectory(searchContent)
add_subdirectory(searchDIR)
add_subdirectory(searchLastMark)
add_subdirectory(selpersonal)
add_subdirectory(setdefaultkey)
#add_subdirectory(showuser)
#add_subdirectory(showwhoperm)
add_subdirectory(sortdir)
#add_subdirectory(sumcgitime)
#add_subdirectory(tianqi)
add_subdirectory(transuu2bin)
#add_subdirectory(tuijian)

#add_subdirectory(upersonal)
add_subdirectory(upgrade)
#add_subdirectory(upnew)
#add_subdirectory(userip)
add_subdirectory(watchman)
add_subdirectory(import_feed)
add_subdirectory(changetid)

